# dotfile-ocd

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml
.github/workflows/: reuse.yaml
src/: cli.rs  config.rs  locate.rs  main.rs  repo.rs  settings.rs  testenv.rs  toml.rs  vcs.rs
src/cli/: ctx.rs
src/config/: settings.rs  toml.rs
src/repo/: deps.rs  vcs.rs
