# SPDX-FileCopyrightText: 2024 Jason Pena <jasonpena@awkless.com>
# SPDX-License-Identifier: MIT

[package]
name = "dotfile-ocd"
description = "Experimental dotfile manager that treats your home directory like a git repository"
keywords = ["dotfile-manager", "ricing", "git", "cli-tool"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/dotfile-ocd"
readme = "README.md"
authors = ["Jason Pena <jasonpena@awkless.com>"]
edition = "2021"
license = "MIT"
version = "0.3.0"
rust-version = "1.77.2"

[[bin]]
name = "ocd"
path = "src/main.rs"

[dependencies]
directories = "~5.0.1"
env_logger = "~0.11.5"
indoc = "~2.0.5"
log = "~0.4.22"
mkdirp = "~1.0.0"
snafu = "~0.8.5"
toml_edit = "~0.22.22"

[dev-dependencies]
mockall = "~0.13.0"
pretty_assertions = "~1.4.1"
rstest = "~0.23.0"
tempfile = "~3.14.0"
